<resources>
    <string name="app_name">TodoListApp</string>
    <string name="title_activity_to_do_add">Agregar una tarea</string>
    <string name="hintTitulo">Titulo de la tarea</string>
    <string name="hintDescripcion">Descripción de la tarea</string>
    <string name="rbBaja">Baja</string>
    <string name="rbMedia">Media</string>
    <string name="rbAlta">Alta</string>
    <string name="btnAgregarTarea">Agregar la tarea</string>
    <string name="tituloDialogoLongClick">Elija una acción</string>
    <string name="mensajeDialogoLongClick">¿Qué desea realizar con la tarea seleccionada?</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mensajeCancelarDialogoLongClick">No se han realizado cambios en las tareas</string>
    <string name="mensajetareaEliminada">Tarea eliminada satisfactoriamente</string>
</resources>
