<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ToDoAddActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etTitulo" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hintTitulo"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etDescripcion" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etTitulo" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hintDescripcion"/>
    <RadioGroup
            android:layout_width="0dp\"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etDescripcion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="32dp" android:orientation="horizontal">
        <RadioButton
                android:text="@string/rbBaja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbBaja" android:layout_weight="1"
                android:background="@color/green"/>
        <RadioButton
                android:text="@string/rbMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbMedia" android:layout_weight="1"
                android:background="@color/yellow"/>
        <RadioButton
                android:text="@string/rbAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbAlta" android:layout_weight="1"
                android:background="@color/red"/>
    </RadioGroup>
    <Button
            android:text="@string/btnAgregarTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAgregarTarea" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>